[gd_scene load_steps=6 format=2]

[ext_resource path="res://LoadoutMenu.gd" type="Script" id=1]
[ext_resource path="res://background/space.jpg" type="Texture" id=2]
[ext_resource path="res://LoadoutButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Dialogue_Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/font-1-export.fnt" type="BitmapFont" id=5]

[node name="LoadoutMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_right = -60.0
margin_bottom = -56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row1" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 392.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot1" type="MarginContainer" parent="VBoxContainer/Row1"]
margin_right = 194.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 47
custom_constants/margin_top = 32
custom_constants/margin_left = 47
custom_constants/margin_bottom = 32

[node name="LoadoutButton" parent="VBoxContainer/Row1/Slot1" instance=ExtResource( 3 )]
margin_left = 47.0
margin_top = 32.0
margin_right = 147.0
margin_bottom = 88.0
text = "Slot 1"

[node name="Sprite" parent="VBoxContainer/Row1/Slot1/LoadoutButton" index="0"]
position = Vector2( 52, 28 )

[node name="Label" parent="VBoxContainer/Row1/Slot1/LoadoutButton" index="1"]
margin_left = -6.0
margin_top = 52.0
margin_right = 106.0
margin_bottom = 67.0

[node name="Slot2" type="MarginContainer" parent="VBoxContainer/Row1"]
margin_left = 198.0
margin_right = 392.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 47
custom_constants/margin_top = 32
custom_constants/margin_left = 47
custom_constants/margin_bottom = 32

[node name="LoadoutButton" parent="VBoxContainer/Row1/Slot2" instance=ExtResource( 3 )]
margin_left = 47.0
margin_top = 32.0
margin_right = 147.0
margin_bottom = 88.0
text = "Slot 2"

[node name="Sprite" parent="VBoxContainer/Row1/Slot2/LoadoutButton" index="0"]
position = Vector2( 52, 28 )

[node name="Label" parent="VBoxContainer/Row1/Slot2/LoadoutButton" index="1"]
margin_left = -6.0
margin_top = 52.0
margin_right = 106.0
margin_bottom = 67.0

[node name="Row2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 392.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slot3" type="MarginContainer" parent="VBoxContainer/Row2"]
margin_right = 194.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 47
custom_constants/margin_top = 32
custom_constants/margin_left = 47
custom_constants/margin_bottom = 32

[node name="LoadoutButton" parent="VBoxContainer/Row2/Slot3" instance=ExtResource( 3 )]
margin_left = 47.0
margin_top = 32.0
margin_right = 147.0
margin_bottom = 88.0
text = "Slot 3"

[node name="Sprite" parent="VBoxContainer/Row2/Slot3/LoadoutButton" index="0"]
position = Vector2( 52, 27 )

[node name="Label" parent="VBoxContainer/Row2/Slot3/LoadoutButton" index="1"]
margin_left = -6.0
margin_top = 52.0
margin_right = 106.0
margin_bottom = 67.0

[node name="Slot4" type="MarginContainer" parent="VBoxContainer/Row2"]
margin_left = 198.0
margin_right = 392.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 47
custom_constants/margin_top = 32
custom_constants/margin_left = 47
custom_constants/margin_bottom = 32

[node name="LoadoutButton" parent="VBoxContainer/Row2/Slot4" instance=ExtResource( 3 )]
margin_left = 47.0
margin_top = 32.0
margin_right = 147.0
margin_bottom = 88.0
text = "Slot 4"

[node name="Sprite" parent="VBoxContainer/Row2/Slot4/LoadoutButton" index="0"]
position = Vector2( 52, 27 )

[node name="Label" parent="VBoxContainer/Row2/Slot4/LoadoutButton" index="1"]
margin_left = -6.0
margin_top = 52.0
margin_right = 106.0
margin_bottom = 67.0

[node name="Label" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -45.0
custom_fonts/font = ExtResource( 5 )
text = "Press any slot to [Start]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue_Box" parent="." instance=ExtResource( 4 )]
margin_left = 86.0
margin_top = 100.0
margin_right = -74.0
margin_bottom = -80.0

[editable path="VBoxContainer/Row1/Slot1/LoadoutButton"]

[editable path="VBoxContainer/Row1/Slot2/LoadoutButton"]

[editable path="VBoxContainer/Row2/Slot3/LoadoutButton"]

[editable path="VBoxContainer/Row2/Slot4/LoadoutButton"]
